deployment/k8s/artifact-runtime/minimind-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimind-inference-artifact-svc
  namespace: llm-serving
spec:
  selector:
    app: minimind-inference-artifact
  ports:
    - protocol: TCP
      port: 8998
      targetPort: 8998
  type: ClusterIP
