deployment/k8s/artifact-runtime/minimind-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimind-inference-artifact-ingress
  namespace: llm-serving
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: minimind.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minimind-inference-artifact-svc
                port:
                  number: 8998
